--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -9,11 +9,11 @@ on:
 jobs:
     build-n-publish:
       name: Build and publish Python distribution
-      runs-on: windows-10
+      runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@master
         - name: Initialize Python 3.10
-        - uses: actions/setup-node@v2
+        - uses: actions/setup-python@v1
           with:
             python-version: 3.10
         - name: Install dependencies
