--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -2,30 +2,33 @@ name: Publish Python distributions to PyPI and TestPyPI
 
 on:
     push:
-      branches: [ master ]
+        branches: [ master ]
     pull_request:
-      branches: [ master ]
+        branches: [ master ]
 
 jobs:
     build-n-publish:
-      name: Build and publish Python distribution
-      runs-on: ubuntu-latest
-      steps:
+    name: Build and publish Python distribution
+    runs-on: ubuntu-18.04
+    steps:
         - uses: actions/checkout@master
-        - name: Initialize Python 3.10
+        - name: Initialize Python 3.7
         - uses: actions/setup-python@v1
           with:
-            python-version: 3.10
+                python-version: 3.10
         - name: Install dependencies
-        - run: |
+          run: |
             python -m pip install --upgrade pip
-            pip install perceptron
-        - name: perceptron
+            pip install numpy
+            pip install matplotlib
+        - name: ---
           run: |
             # stop the build if there are Python syntax errors or undefined names
-            flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+            numpy . --count --select=E9,F63,F7,F82 --show-source --statistics
+            matplotlib . --count --select=E9,F63,F7,F82 --show-source --statistics
             # exit-zero treats all errors as warnings.
-            flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+            numpy . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+            matplotlib . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
         - name: Build binary wheel and a source tarball
           run: python setup.py sdist
         - name: Publish distribution to Test PyPI
