--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,38 +1,7 @@
-name: Publish Python distributions to PyPI and TestPyPI
-
-on:
-    push:
-        branches: [ master ]
-    pull_request:
-        branches: [ master ]
-
-jobs:
-    build-n-publish:
-        name: Build and publish Python distribution
-        runs-on: windows-10
-        steps:
-          - uses: actions/checkout@master
-          - name: Initialize Python 3.10
-          - uses: actions/setup-python@v2
-            with:
-                python-version: 3.10
-          - name: Install dependencies
-            run: |
-                python -m pip install --upgrade pip
-                pip install numpy
-                pip install matplotlib
-          - name: ---
-            run: |
-                # stop the build if there are Python syntax errors or undefined names
-                numpy . --count --select=E9,F63,F7,F82 --show-source --statistics
-                matplotlib . --count --select=E9,F63,F7,F82 --show-source --statistics
-                # exit-zero treats all errors as warnings.
-                numpy . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-                matplotlib . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-          - name: Build binary wheel and a source tarball
-            run: python setup.py sdist
-          - name: Publish distribution to Test PyPI
-          - uses: pypa/gh-action-pypi-publish@master
-            with:
-              password: ${{ secrets.test_pypi_password }}
-              repository_url: https://test.pypi.org/legacy/
+steps:
+- uses: actions/checkout@v2
+- uses: actions/setup-python@v2
+  with:
+    python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+    architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+- run: python my_script.py
