--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,22 +1,7 @@
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-jobs:
-  build:
-    runs-on: [ubuntu-latest, windows-lates]
-    strategy:
-      matrix:
-        python-version: [ '2.x', '3.x', 'pypy-2.7', 'pypy-3.6', 'pypy-3.7' ]
-    name: Python ${{ matrix.python-version }} sample
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-          architecture: x64
-      - run: python perceptron.py
+steps:
+- uses: actions/checkout@v2
+- uses: actions/setup-python@v2
+  with:
+    python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+    architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+- run: python my_script.py
