--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,5 @@ jobs:
       - name: Test with pytest
         run: |
             pip install numpy 
+            pip install matplotlib
             python -m doctest -v perceptron-code/*.py
